--- a/src/components/WelcomeAccordion/welcomeAccordion.css
+++ b/src/components/WelcomeAccordion/welcomeAccordion.css
@@ -10,6 +10,7 @@
   text-align: center;
   padding-top: 50px;
   height: 100%;
+  padding-bottom: 90px;
 }
 
 .welcomeAccordion-title{
@@ -120,13 +121,52 @@
 .show-more{
   color: #3e8fcf;
   transition: .3s;
+  position: relative;
 }
 
 .show-more:hover{
   color: #489de0;
 }
 
-.show-more::before{
+.show-info{
+  position: relative;
+}
+
+.show-more-span::after{
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 12px;
+  background: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%09%20%20%20viewBox%3D%220%200%205%203%22%20enable-background%3D%22new%200%200%205%203%22%20xml%3Aspace%3D%22preserve%22%3E%3Cpolygon%20id%3D%22strSmall_x5F_dark%22%20fill%3D%22%233e8fcf%22%20points%3D%222.5%2C3%200%2C0.696%200.738%2C0%202.5%2C1.607%204.262%2C0%205%2C0.696%20%22%2F%3E%3C%2Fsvg%3E") no-repeat;
+  background-position: center;
+  width: 10px;
+  height: 6px;
+  transition: .3s;
+}
+
+.show-more-span{
+  border: 1px solid #e0e0e0;
+  border-radius: 50%;
+  background:transparent;
+  height: 30px;
+  width: 30px;
+  top: 30px;
+  transition: all .3s ease-in-out;
+  display: block;
+  margin: 12px auto 0;
+}
+
+.show-more-span:hover{
+  border-color:#489de0;
+  background:#489de0;
+}
+
+.show-more-span:hover::after{
+  background: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%09%20%20%20viewBox%3D%220%200%205%203%22%20enable-background%3D%22new%200%200%205%203%22%20xml%3Aspace%3D%22preserve%22%3E%3Cpolygon%20id%3D%22strSmall_x5F_dark%22%20fill%3D%22%23ffffff%22%20points%3D%222.5%2C3%200%2C0.696%200.738%2C0%202.5%2C1.607%204.262%2C0%205%2C0.696%20%22%2F%3E%3C%2Fsvg%3E") no-repeat;
+    width: 10px;
+    height: 6px;
+  
 }
 
 .welcomeAccordion-main{
