--- a/src/components/WelcomeAccordion/welcomeAccordion.css
+++ b/src/components/WelcomeAccordion/welcomeAccordion.css
@@ -122,6 +122,7 @@
   color: #3e8fcf;
   transition: .3s;
   position: relative;
+  cursor: pointer;
 }
 
 .show-more:hover{
@@ -155,6 +156,7 @@
   transition: all .3s ease-in-out;
   display: block;
   margin: 12px auto 0;
+  cursor: pointer;
 }
 
 .show-more-span:hover{
