--- a/src/components/Delivery/DeliveryMethods/DeliveryMethods.css
+++ b/src/components/Delivery/DeliveryMethods/DeliveryMethods.css
@@ -2,46 +2,7 @@
   margin-left: 15px;
 }
 
-.delivery-item{
-  border-bottom: solid 1px #e0e0e0;
-  line-height: 24px;
-  padding: 0 0 10px;
+.delivery-items{
+  margin-bottom: 60px;
 }
 
-.delivery-item:hover  span::before{
-  background: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%09%20%20%20viewBox%3D%220%200%2012%207%22%20enable-background%3D%22new%200%200%2012%207%22%20xml%3Aspace%3D%22preserve%22%3E%3Cg%3E%09%3Cpolygon%20fill%3D%22%23999999%22%20points%3D%220.681%2C0%206%2C5.62%2011.318%2C0%2012%2C0.66%206%2C7%200%2C0.66%20%09%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E") no-repeat;
-  background-position: center;
-  width: 10px;
-  height: 10px;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  content: "";
-  right: 30px;
-}
-
-.delivery-item-header{
-  cursor: pointer;
-  font-size: 16px;
-  line-height: 24px;
-  padding: 20px 20px 10px 0;
-  position: relative;
-}
-
-.delivery-item-header span::before{
-  background: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%09%20%20%20viewBox%3D%220%200%2012%207%22%20enable-background%3D%22new%200%200%2012%207%22%20xml%3Aspace%3D%22preserve%22%3E%3Cg%3E%09%3Cpolygon%20fill%3D%22%23c2c2c2%22%20points%3D%220.681%2C0%206%2C5.62%2011.318%2C0%2012%2C0.66%206%2C7%200%2C0.66%20%09%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E") no-repeat;
-  background-position: center;
-  width: 10px;
-  height: 10px;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  content: "";
-  right: 30px;
-  transition: .3s;
-}
-
-.delivery-item-shortInfo{
-  padding: 0 40px 10px 0;
-  font-size: 14px;
-}
